--- a/src/config/i18n/locales/ka.json
+++ b/src/config/i18n/locales/ka.json
@@ -76,5 +76,5 @@
   "lowercase_characters": "პატარა ასოები.",
   "save_changes": "ცვლილებების შენახვა",
   "check_your_email": "შეამოწმეთ თქვენი ელ-ფოსტა",
-  "search_placeholder": "წეიყვანეთ @ ფილმების გასაპილტრად, შეიყვანეთ # ციტატების გასაფილტრად"
+  "search_placeholder": "წეიყვანეთ 'at' ფილმების გასაპილტრად, შეიყვანეთ 'hash' ციტატების გასაფილტრად"
 }
